Closed Bug 1878383 Opened 2 years ago Closed 1 month ago

onnotificationclose is not implemented on Android

Categories

(Core :: DOM: Notifications, defect, P3)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox142 --- fixed

People

(Reporter: saschanaz, Assigned: saschanaz)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

While looking at bug 1875257 I found Android somehow fails to fire onnotificationclose in certain situation, it needs some investigation.

Severity: -- → S3
Priority: -- → P3
Component: DOM: Push Subscriptions → DOM: Notifications
Summary: onnotificationclose is unstable on Android → onnotificationclose is not implemented on Android

I had a wrong assumption in D248312 that alertfinished will always be called by GeckoView, but turns out that each backend calls it immediately within CloseAlert implementation.

This aligns Android implementation with others, and bug 1975432 is filed for deduplication.

Pushed by krosylight@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/979ebda30b4a https://hg.mozilla.org/integration/autoland/rev/d7bcf597a702 Fire alertfinished in AndroidAlerts::CloseAlert r=emilio,geckoview-reviewers,owlish
Status: NEW → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: