Bug 1878383 - Fire alertfinished in AndroidAlerts::CloseAlert r=emilio,geckoview-reviewers,owlish

I had a wrong assumption in D248312 that alertfinished will always be called by GeckoView, but turns out that each backend calls it immediately within CloseAlert implementation.

This aligns Android implementation with others, and bug 1975432 is filed for deduplication.

Differential Revision: https://phabricator.services.mozilla.com/D255956